GNOME Bugzilla – Bug 749404
gdm crashes after user session exits unclean
Last modified: 2015-07-02 14:01:43 UTC
Every time the user session crashes gdm will crash too. See this backtrace:
+ Trace 235064
The user session exited with some problem thus session id is empty. This results in a SEGV. See https://bugzilla.redhat.com/show_bug.cgi?id=1214916 for detailled backtrace and additional info. Since gnome/wayland session does something different (I don't understand what) compared to gnome/X11 session it always causes gdm to crash on logout (using Fedora 22).
Seeing this in a VMWare guest, too. I think in add_session_record(), this check should be "||" instead of "&&" if (display_name == NULL && display_device == NULL) { goto out; }
(In reply to Sinclair Yeh from comment #1) > Seeing this in a VMWare guest, too. I think in add_session_record(), this > check should be "||" instead of "&&" > > > if (display_name == NULL && display_device == NULL) { > goto out; > } Actually, strike that. The issue is gdm_session_record_logout() is not checking x11_display_name before using it. Perhaps there should be a check like the one at the beginning of gdm_session_record_login()
yea, totally. I goofed on that one.
Created attachment 306483 [details] [review] session-record: support NULL display name if tty available (for logout/failed) wayland sessions don't necessarily have a display name, so this commit just uses the display device instead. It's like commit 1edb0e4ae897cb1c53af3f3b2b913d5baf731580 but for logout and failed records. Discovered by Sinclair Yeh <syeh@vmware.com>
Attachment 306483 [details] pushed as 29ecdb3 - session-record: support NULL display name if tty available (for logout/failed)
The patch looks good to me. Reviewed-by: Sinclair Yeh <syeh@vmware.com>
This looks like a good candidate for a backport?
indeed, i'm overdue for a 3.16 release anyway, doing one now