session-record: support NULL display name if tty available (for logout/failed)

wayland sessions don't necessarily have a display name, so this
commit just uses the display device instead.

It's like commit 1edb0e4ae897cb1c53af3f3b2b913d5baf731580 but for
logout and failed records.

Discovered by Sinclair Yeh <syeh@vmware.com>

https://bugzilla.gnome.org/show_bug.cgi?id=749404